added two navbar

--- a/src/app/top-navbar/top-navbar.component.html
+++ b/src/app/top-navbar/top-navbar.component.html
@@ -1,1 +1,26 @@
-<p>top-navbar works!</p>
+<div class="blacknav">
+   <div class="wrapper"><p  class="blacknavtext">Summer Sale For All Swim Suits And Free Express Delivery-OFF 50%!  <a >SHOP NOW</a></p></div> 
+    
+</div>
+<nav class="secondnav">
+    <div class="exclusive">
+    <a class="logo">EXCLUSIVE</a>
+    <ul class="list">
+        <li><a>Home</a></li>
+        <li><a>About</a></li>
+        <li><a>Contact</a></li>
+        <li><a>Sign Up</a></li>
+    </ul>
+    <div class="searchdiv">
+        <form class="searchform">
+            <input class="searchinput" placeholder="search here...">
+            <img src="\assets\img\topnav\search.svg">
+        </form>
+         <a>
+        <img src="\assets\img\topnav\heart.svg"></a>
+        <a>
+            <img src="\assets\img\topnav\cart.svg">
+        </a>
+    </div>
+    </div>
+</nav>
