Create footer html template

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,41 @@
-<p>footer works!</p>
+<footer>
+    <div class="footer-container">
+        <div class="footer-content">
+            <div class="footer-column">
+                <h2>Exclusive</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, accusantium, repellendus aut qui quis nulla officia quae praesentium commodi cum ut animi? Enim excepturi nisi, ipsa sit nulla dolore sequi!
+                </p>
+              </div>
+              <div class="footer-column">
+                <h3>Contact Us</h3>
+                <ul class="footer-list">
+                  <li>Location</li>
+                  <li>Email</li>
+                  <li>Number</li>
+                </ul>
+              </div>
+              <div class="footer-column">
+                <h3>Profile</h3>
+                <ul class="footer-list">
+                  <li>Login/Register</li>
+                  <li>Account</li>
+                  <li>Cart</li>
+                  <li>Shop</li>
+                </ul>
+              </div>
+              <div class="footer-column">
+                <h3>Support</h3>
+                <ul class="footer-list">
+                  <li>Privacy Policy</li>
+                  <li>Terms of Use</li>
+                  <li>FAQ's</li>
+                  <li>Contact</li>
+                </ul>
+              </div>
+        </div>
+          <div footer-bottom>
+            <span class="copyright">&copy; 2024 ECommerce. All rights reserved</span>
+          </div>
+    </div>
+</footer>
