--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,1 +1,42 @@
-<p>side-nav works!</p>
+<div class="outersidenav">
+<div class="sidenav">
+    <ul class="womanlist">
+        <li>Woman's Fashion</li>
+        <li>Men's Fashion</li>
+        <li>Electronics</li>
+        <li>Home & Lifesyle</li>
+        <li>Medicine</li>
+        <li>Sports & Outdoor</li>
+        <li>Baby's & Toys</li>
+        <li>Groceries & Pets</li>
+        <li>Health & Beauty</li>
+    </ul>
+
+</div>
+
+<div class="iphone">
+    <div class="iphonetextandimage">
+        <div class="logoandtext">
+        <img class="iphoneimage"   src="\assets\img\sidenav\apple.svg">
+        <p class="iphonetext">iphone 14 Series</p>
+        </div>
+    
+    <div class="voucher"> 
+    <p class="vouchertext"> Up to 10% off Voucher</p>
+ </div> 
+
+    <div class="shopnowdiv">
+       
+    <p class="shopnow">Shop Now</p>
+    <img class="arrow" src="\assets\img\sidenav\arrow-right.svg">
+</div>
+</div>
+
+        
+ <img class="iphonepicture" src="assets\img\sidenav\iphoneimage.jpg">
+    
+    
+
+</div>
+
+</div>
