--- a/src/app/categories-trending/categories-trending.component.html
+++ b/src/app/categories-trending/categories-trending.component.html
@@ -1,1 +1,17 @@
-<p>categories-trending works!</p>
+<div class="jblouterdiv">
+    <div>
+        <p>Categories</p>
+    </div>
+
+    <div>
+        <p>Enhance Your Music Experience</p>
+    </div>
+
+    <div>
+        <button>Buy Now!</button>
+    </div>
+    <div class="jblimagediv">
+        <img class="jbl">
+    </div>
+
+</div>
