Create a featured section html template

--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -1,1 +1,64 @@
-<p>featured works!</p>
+<div class="container">
+  <div class="featured-section-title">
+    <p>Featured</p>
+  </div>
+  <div class="featured-section-header">
+    <h1>NEW ARRIVALS</h1>
+  </div>
+  <div class="featured-grid">
+    <div
+      class="featured-card"
+      [style.background-image]="'url(assets/images/featured-imgs/gallery-1.png)'"
+    >
+    <div class="featured-section-content">
+      <h3>Play Station 5</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio rem,
+        facere ad ipsum saepe placeat.
+      </p>
+      <a href="#">SHOP NOW</a>
+    </div>
+    </div>
+    <div
+      class="featured-card grid-col-span4 grid-row-span3"
+      [style.background-image]="'url(assets/images/featured-imgs/gallery-2.png)'"
+    >
+    <div class="featured-section-content">
+      <h3>Play Station 5</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio rem,
+        facere ad ipsum saepe placeat.
+      </p>
+      <a href="#">SHOP NOW</a>
+    </div>
+     
+    </div>
+    <div
+      class="featured-card grid-col-span2 grid-row-span4"
+      [style.background-image]="'url(assets/images/featured-imgs/image-3.png)'"
+    >
+    <div class="featured-section-content">
+      <h3>Play Station 5</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio rem,
+        facere ad ipsum saepe placeat.
+      </p>
+      <a href="#">SHOP NOW</a>
+    </div>
+    
+    </div>
+    <div
+      class="featured-card grid-col-span2 grid-row-span4"
+      [style.background-image]="'url(assets/images/featured-imgs/image4.jpg)'"
+      >
+     <div class="featured-section-content">
+        <h3>Play Station 5</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio rem,
+          facere ad ipsum saepe placeat.
+        </p>
+        <a href="#">SHOP NOW</a>
+     </div>
+    </div>
+  </div>
+</div>
