Correct trending categories in app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-top-navbar></app-top-navbar>
 <app-side-nav></app-side-nav>
 <app-flash-sale></app-flash-sale>
-<app-categories></app-categories>
+<app-categories-trending></app-categories-trending>
 <app-best-selling-products></app-best-selling-products>
 <app-categories></app-categories>
 <app-our-products></app-our-products>
