--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,6 +2,8 @@ footer{
     background-color: #141414;
     color: #fff;
     padding: 12px;
+    position: absolute;
+    bottom: 0;
 }
 
 .footer-container{
