--- a/src/app/categories-trending/categories-trending.component.html
+++ b/src/app/categories-trending/categories-trending.component.html
@@ -1,17 +1,19 @@
 <div class="jblouterdiv">
-    <div>
-        <p>Categories</p>
+    <div class="innerdiv">
+        <div>
+        <p class="categories">Categories</p>
+        </div>
+
+        <div class="enhancediv">
+        <p class="enhance">Enhance Your Music Experience</p>
     </div>
 
-    <div>
-        <p>Enhance Your Music Experience</p>
-    </div>
-
-    <div>
+   <div>
         <button>Buy Now!</button>
+   </div>
     </div>
-    <div class="jblimagediv">
-        <img class="jbl">
-    </div>
+    
+        <img class="jbl" src="\assets\img\categories-trending\jblimage.jpg">
+   
 
 </div>
