--- a/src/app/our-services/our-services.component.html
+++ b/src/app/our-services/our-services.component.html
@@ -1,1 +1,32 @@
-<p>our-services works!</p>
+<div class="outerdiv">
+    <div class="fast">
+        <div class="centerit">
+        <div class="imagediv">
+            <div class="fastimage" >
+        <img class="truck" src="\assets\img\our-services\truck.svg"></div>
+    </div>
+    </div>
+        <div class="fasttextdiv"><p class="fasttext">FAST AND FREE DELIVERY</p></div>
+        <div class="lorem"><p>Lorem ipsum dolor sit amet consectetur.</p></div>
+    </div>
+    <div class="support">
+        <div class="centerit">
+        <div class="imagediv">
+        <div class="supportimage" >
+        <img  class="truck" src="\assets\img\our-services\headphones.svg"></div></div>
+        </div>
+        <div class="supportdiv"><p class="support2">24/7 SUPPORT</p></div>
+        <div class="lorem"><p>Lorem ipsum dolor sit amet consectetur.</p></div>
+    </div>
+
+    <div class="guarantee">
+        <div class="centerit">
+        <div class="imagediv">
+            <div class="guaranteeimage">
+        <img class="truck"  src="\assets\img\our-services\shield-check.svg" ></div></div>
+        </div>
+        <div class="fasttextdiv"><p class="fasttext">MONEY BACK GUARANTY</p></div>
+        <div class="lorem"><p>Lorem ipsum dolor sit amet consectetur.</p></div>
+    </div>
+
+</div>
