removed trending routing and changed feature component outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <app-flash-sale></app-flash-sale>
 <app-categories></app-categories>
 <app-best-selling-products></app-best-selling-products>
-<app-categories></app-categories>
+<app-categories-trending></app-categories-trending>
 <app-our-products></app-our-products>
 <app-featured></app-featured>
 <app-our-services></app-our-services>
