--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,1 +1,15 @@
-<p>categories works!</p>
+<div class="categories-container">
+  <div class="header-categories">
+    <p>categories</p>
+    <h3>CATEGORIES</h3>
+  </div>
+  <div class="categories-card">
+    <div *ngFor="let icon of icons" class="icons-grid-display">
+      <img
+        [src]="'assets/all-categories-icons/' + icon.myicon"
+        alt="SVG Icon"
+      />
+      <p class="icon-title">{{ icon.title }}</p>
+    </div>
+  </div>
+</div>
