Create star rating div and add path of star

--- a/src/app/flash-sale/flash-sale.component.html
+++ b/src/app/flash-sale/flash-sale.component.html
@@ -30,10 +30,16 @@
       </div>
       <div class="product-details-section">
         <h3>{{ product.name }}</h3>
-        <!-- <p>{{ product.description }}</p> -->
         <p>Price: ${{ product.price }}</p>
         <div class="star-rating">
-          stars
+          <div class="stars-display">
+            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+          </div>
+
           <p class="use-rating">(88)</p>
         </div>
         <div>
