--- a/src/app/flash-sale/flash-sale.component.css
+++ b/src/app/flash-sale/flash-sale.component.css
@@ -76,8 +76,7 @@
     position: absolute;
     bottom: 0;
     text-align: center;
-    /* padding: 10px; */
-    display: flex;
+    /* padding: 10px; */    display: flex;
     flex-direction: column;
     align-items: flex-start;
     p{
@@ -88,8 +87,13 @@
 
 .star-rating{
     display: flex;
-    gap: 10px;
+    gap: 15px;
 }
+
+.stars-display img{    
+        width: 20px;
+        height: 20px;
+    }
 
 .card{
     height: 70vh;
