added the products section

--- a/src/app/our-products/our-products.component.html
+++ b/src/app/our-products/our-products.component.html
@@ -1,1 +1,207 @@
-<p>our-products works!</p>
+<div class="outerdiv">
+    <div class="products" >
+        <div><h4>Our products</h4></div>
+        <div><p class="explore">Explore Our Products</p>
+        </div>
+    </div>
+    <div class="innerdiv">
+        <div class="carddiv">
+        <div class="card">
+            <div class="eyeandheart">
+            <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                </div>
+                <div class="eyediv">
+                <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+            </div>
+            </div>
+            
+            
+            <div class="imagediv">
+                
+            <img   class="cesarimg" src="\assets\img\our-products\cesar1.png">
+            </div>
+            
+        </div>
+        
+        <div class="belowimg">
+            <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+            <div class="moneydiv"><p class="moneyp">$120</p></div>
+            <div class="star"> 
+                <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> (88)</div>
+        </div>
+</div>
+
+
+
+<div class="carddiv">
+        <div class="card">
+            <div class="eyeandheart">
+                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                    </div>
+                    <div class="eyediv">
+                    <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+                </div>
+                </div>
+            <div class="imagediv">
+             <img class="canonimg" src="\assets\img\our-products\canon1.png" alt=""> 
+            </div>
+            </div>
+
+            <div class="belowimg">
+                <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+                <div class="moneydiv"><p class="moneyp">$120</p></div>
+                <div class="star"> 
+                    <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> (88)</div>
+            </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+          <div class="carddiv">
+        <div class="card">
+            <div class="eyeandheart">
+                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                    </div>
+                    <div class="eyediv">
+                    <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+                </div>
+                </div>
+            <div class="imagediv">
+            <img class="laptopimg" src="\assets\img\our-products\laptop1.png">
+            </div>
+        </div>
+
+        <div class="belowimg">
+            <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+            <div class="moneydiv"><p class="moneyp">$120</p></div>
+            <div class="star"> 
+                <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> (88)</div>
+        </div>
+</div>
+
+        <div class="carddiv">
+        <div class="card"> 
+            <div class="eyeandheart">
+                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                    </div>
+                    <div class="eyediv">
+                    <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+                </div>
+                </div>
+            <div class="imagediv">
+            <img class="car" src="\assets\img\our-products\car1.png" alt="">
+            </div>
+            </div>
+        
+        <div class="belowimg">
+            <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+            <div class="moneydiv"><p class="moneyp">$120</p></div>
+            <div class="star"> 
+                <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> (88)</div>
+        </div>
+        </div>
+    </div>
+    
+    <div class="innerdiv2">
+        <div class="carddiv">
+        <div  class="card">
+            <div class="eyeandheart">
+                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                    </div>
+                    <div class="eyediv">
+                    <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+                </div>
+                </div>
+            <div class="imagediv">
+            <img class="shoesimg" src="\assets\img\our-products\shoes1.png">
+            </div>
+            </div>
+            <div class="belowimg">
+                <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+                <div class="moneydiv"><p class="moneyp">$120</p></div>
+                <div class="star"> 
+                    <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt="">(88)</div>
+            </div>
+            </div>
+
+
+        <div class="carddiv">
+        <div class="card"> 
+            <div class="eyeandheart">
+                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                    </div>
+                    <div class="eyediv">
+                    <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+                </div>
+                </div>
+            <div class="imagediv">
+            <img class="controllerimg" src="assets\img\our-products\controller1.png" alt="">
+            </div>
+            </div>
+            <div class="belowimg">
+                <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+                <div class="moneydiv"><p class="moneyp">$120</p></div>
+                <div class="star"> 
+                    <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> (88)</div>
+            </div>
+            </div>
+
+        <div class="carddiv">
+        <div class="card">
+            <div class="eyeandheart">
+                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                    </div>
+                    <div class="eyediv">
+                    <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+                </div>
+                </div>
+            <div class="imagediv">
+            <img class="jacketimg" src="\assets\img\our-products\jacket1.png">
+            </div>
+            </div>
+
+        
+            <div class="belowimg">
+                <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+                <div class="moneydiv"><p class="moneyp">$120</p></div>
+                <div class="star"> 
+                    <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt="">(88)</div>
+            </div>
+            </div>
+
+
+        <div class="carddiv">
+        <div class="card">
+            <div class="eyeandheart">
+                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                    </div>
+                    <div class="eyediv">
+                    <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
+                </div>
+                </div>
+            <div class="imagediv">
+             <img class="curologyimg" src="\assets\img\our-products\curology1.png" alt="">
+            </div>
+            </div>
+
+            <div class="belowimg">
+                <div><p class="havit">HAVIT HV-G92 Gamepad</p></div>
+                <div class="moneydiv"><p class="moneyp">$120</p></div>
+                <div class="star"> 
+                    <img  src="\assets\img\our-products\star.jpeg" alt=""><img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> <img src="\assets\img\our-products\star.jpeg" alt=""> (88)</div>
+            </div>
+            </div>
+        
+    </div>
+  <div class="buttondiv"><button class="button">VIEW ALL PRODUCTS</button></div>
+</div>
+
+
+
