moved the like postion

--- a/src/app/our-products/our-products.component.html
+++ b/src/app/our-products/our-products.component.html
@@ -7,9 +7,10 @@
     <div class="innerdiv">
         <div class="carddiv">
         <div class="card">
-            <div class="eyeandheart">
-            <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                </div>
+           <div class="eyeandheart">
+            <div class="heartdiv"> 
+                <img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+               </div>
                 <div class="eyediv">
                 <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
             </div>
@@ -36,13 +37,15 @@
 <div class="carddiv">
         <div class="card">
             <div class="eyeandheart">
-                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                    </div>
-                    <div class="eyediv">
+
+                  <div class="heartdiv"> 
+                    <img class="heart" src="\assets\img\our-products\heart.svg" alt=""> 
+                   </div>
+                     <div class="eyediv">
                     <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
                 </div>
                 </div>
-            <div class="imagediv">
+           <div class="imagediv">
              <img class="canonimg" src="\assets\img\our-products\canon1.png" alt=""> 
             </div>
             </div>
@@ -67,13 +70,15 @@
           <div class="carddiv">
         <div class="card">
             <div class="eyeandheart">
-                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                    </div>
-                    <div class="eyediv">
+                <div class="heartdiv">
+               <img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                 </div>  
+                   <div class="eyediv">
                     <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
                 </div>
                 </div>
-            <div class="imagediv">
+                
+           <div class="imagediv">
             <img class="laptopimg" src="\assets\img\our-products\laptop1.png">
             </div>
         </div>
@@ -89,13 +94,15 @@
         <div class="carddiv">
         <div class="card"> 
             <div class="eyeandheart">
-                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                    </div>
-                    <div class="eyediv">
+                <div class="heartdiv">
+                <img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                  </div>  
+                  <div class="eyediv">
                     <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
                 </div>
                 </div>
-            <div class="imagediv">
+              
+        <div class="imagediv">
             <img class="car" src="\assets\img\our-products\car1.png" alt="">
             </div>
             </div>
@@ -113,12 +120,15 @@
         <div class="carddiv">
         <div  class="card">
             <div class="eyeandheart">
-                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                    </div>
-                    <div class="eyediv">
+                <div class="heartdiv">
+                <img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                  </div>
+                    
+                  <div class="heartdiv">
                     <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
                 </div>
                 </div>
+                
             <div class="imagediv">
             <img class="shoesimg" src="\assets\img\our-products\shoes1.png">
             </div>
@@ -135,13 +145,15 @@
         <div class="carddiv">
         <div class="card"> 
             <div class="eyeandheart">
-                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                    </div>
-                    <div class="eyediv">
+                <div class="heartdiv">
+                <img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                 </div>   
+                  <div class="eyediv">
                     <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
                 </div>
                 </div>
-            <div class="imagediv">
+               
+                <div class="imagediv">
             <img class="controllerimg" src="assets\img\our-products\controller1.png" alt="">
             </div>
             </div>
@@ -156,15 +168,16 @@
         <div class="carddiv">
         <div class="card">
             <div class="eyeandheart">
-                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                    </div>
-                    <div class="eyediv">
+                <div class="heartdiv">
+                <img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                  </div>  
+                   <div class="eyediv">
                     <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
                 </div>
-                </div>
-            <div class="imagediv">
+               </div>
+                <div class="imagediv">
             <img class="jacketimg" src="\assets\img\our-products\jacket1.png">
-            </div>
+           </div>
             </div>
 
         
@@ -180,15 +193,17 @@
         <div class="carddiv">
         <div class="card">
             <div class="eyeandheart">
-                <div class="heartdiv"><img class="heart" src="\assets\img\our-products\heart.svg" alt="">
-                    </div>
+                <div class="heartdiv">
+                <img class="heart" src="\assets\img\our-products\heart.svg" alt="">
+                 </div>   
                     <div class="eyediv">
                     <img class="eye" src="\assets\img\our-products\eye.svg" alt="">
                 </div>
                 </div>
-            <div class="imagediv">
+              
+                <div class="imagediv">
              <img class="curologyimg" src="\assets\img\our-products\curology1.png" alt="">
-            </div>
+           </div>
             </div>
 
             <div class="belowimg">
