--- a/src/app/our-products/our-products.component.css
+++ b/src/app/our-products/our-products.component.css
@@ -8,12 +8,15 @@
    margin-left: 30px;
    margin-right: 30px;
    gap: 2px;
+   margin-bottom: 40px;
    
 }
 
 .cesarimg{
     width: 150px;
     height: 150px;
+    
+    
     
    
 }
@@ -35,7 +38,7 @@
 }
 .car{
     height: 150px;
-    width: 250px;
+    width: 150px;
 }
 .laptopimg{
     width: 150px;
@@ -68,54 +71,64 @@
     margin-left: 10px;
 }
 .heartdiv{
-    display: flex;
-    margin-left: 100px;
+   
+    justify-content: center;
     border-radius: 50%;
     
     height: 20px;
     width: 20px;
-    justify-content: center;
+    
     padding: 10px;
     background-color:white;
+  
+    margin-bottom: 10px;
+    margin-right: 10px;
+    
+  
 }
 .eyediv{
     display: flex;
-    margin-left: 10px;
+    justify-content: center;
     border-radius: 50%;
     
     height: 20px;
     width: 20px;
     justify-content: center;
     padding: 10px;
-    margin-right: 10px;
+    margin-right: auto;
     background-color:white;
-}
-/* .heart{
-    border-radius: 50%;
-    border: solid 2px red;
-}
-.eye{
-    border-radius: 50%;
-    border: solid 2px red;
+  
    
-} */
-.eyeandheart{
-    display: flex;
-    justify-content: right;
-    margin-top: 2px;
     
 }
+ 
+ 
+.eyeandheart{
+    display: flex;
+   
+  margin-top: 200px;
+ 
+margin-left: 200px;
+ justify-content: center;
+  
+ 
+ 
+  
+     
+}
 .card{
-    justify-content: center;
+    
   
     display: flex;
     flex-direction: column;
     height: 240px;
     width: 300px;
+    justify-content: center;
     
     background-color: #f5f5f5;
     
-    margin: auto;
+    
+    
 
   
 }
@@ -133,14 +146,17 @@
     flex-direction: column;
     justify-content: center;
     
-    margin-right: 2px;
+    
 
     
 }
 .imagediv{
-    display: flex;
-    justify-content: center;
+    position: absolute;
+  align-items: center;
+  margin-left: 80px;
+  
     background-color: transparent;
+   
 }
 .havit{
     font-weight: 900;
@@ -176,9 +192,16 @@
 }
 h4{
     color: red;
+    
+}
+
+h4 ::after{
     list-style-type: square ;
+    color: red;
+
 }
 .products{
     margin-left: 40px;
 
 }
+
