--- a/src/app/flash-sale/flash-sale.component.html
+++ b/src/app/flash-sale/flash-sale.component.html
@@ -6,52 +6,54 @@
       <span>Expired</span>
     </div>
   </div>
-  <div class="cards-container">
-    <div *ngFor="let product of products" class="card">
-      <div class="image-container">
-        <img
-          src="{{ product.productImage }}"
-          alt="{{ product.name }}"
-          class="card-img-top"
-        />
-        <div class="discount-sticker">40%</div>
-        <div class="product-icons">
-          <img
-            class="icon-img"
-            src="assets/flash-sale-imgs/my-icons/eye.svg"
-            alt=""
-          />
-          <img
-            class="icon-img"
-            src="assets/flash-sale-imgs/my-icons/heart.svg"
-            alt=""
-          />
-        </div>
-      </div>
-      <div class="product-details-section">
-        <h3>{{ product.name }}</h3>
-        <p>Price: ${{ product.price }}</p>
-        <div class="star-rating">
-          <div class="stars-display">
-            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
-            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
-            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
-            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
-            <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
-          </div>
 
-          <p class="use-rating">(88)</p>
+  <owl-carousel-o [options]="customOptions">
+    <ng-container *ngFor="let product of products">
+      <ng-template carouselSlide [id]="product.id">
+        <div class="image-container">
+          <img
+            src="{{ product.productImage }}"
+            alt="{{ product.name }}"
+            class="card-img-top"
+          />
+          <div class="discount-sticker">40%</div>
+          <div class="product-icons">
+            <img
+              class="icon-img"
+              src="assets/flash-sale-imgs/my-icons/eye.svg"
+              alt=""
+            />
+            <img
+              class="icon-img"
+              src="assets/flash-sale-imgs/my-icons/heart.svg"
+              alt=""
+            />
+          </div>
         </div>
-        <div>
-          <button class="add-to-cart-btn">Add to Cart</button>
+        <div class="product-details-section">
+          <h3>{{ product.name }}</h3>
+          <p>Price: ${{ product.price }}</p>
+          <div class="star-rating">
+            <div class="stars-display">
+              <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+              <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+              <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+              <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+              <img src="assets/flash-sale-imgs/star.jpeg" alt="star" />
+            </div>
+            <p class="use-rating">(88)</p>
+          </div>
+          <div>
+            <button class="add-to-cart-btn">Add to Cart</button>
+          </div>
         </div>
-      </div>
+      </ng-template>
+    </ng-container>
+  </owl-carousel-o>
+
+  <div class="card-footer">
+    <div class="view-all-btn">
+      <button class="flash-container-button">VIEW ALL PRODUCTS</button>
     </div>
-  </div>
-  <div class="pagination">
-    <h5>pagination</h5>
-  </div>
-  <div class="view-all-btn">
-    <button class="flash-container-button">VIEW ALL PRODUCTS</button>
   </div>
 </div>
