--- a/src/app/best-selling-products/best-selling-products.component.css
+++ b/src/app/best-selling-products/best-selling-products.component.css
@@ -13,19 +13,27 @@
   
   .cards-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(8, calc(25% - 20px));
     gap: 20px;
+    overflow: scroll;
   }
+
+  .cards-container::-webkit-scrollbar{
+    display: none;
+}
   
-  .image-container {
-    height: auto;
-  }
+.image-container{
+  position: relative;
+  width: 300px;
+}
+
   
   .product-icons {
     position: absolute;
     z-index: 9;
     top: 9px;
     right: 10px;
+    display: flex;
   }
   
   .icon-img {
@@ -68,26 +76,30 @@
   }
   
   .card-img-top:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
   
-  .product-details-section {
+  .product-details-section{
+    padding-top: 20px;
+    bottom: 0;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-end;
-    margin-top: 15px;
-    p {
-      font-size: 16px;
-      color: #db4444;
+    p{
+    font-size: 16px;
+    color: #db4444;
     }
-  }
+}
   
   .star-rating {
     display: flex;
     gap: 15px;
   }
+
+  .stars-display{
+    display: flex;
+}
   
   .stars-display img {
     width: 20px;
@@ -95,12 +107,7 @@
   }
   
   .card {
-    height: 70vh;
     border: none;
-  }
-  
-  .view-all-btn {
-    text-align: center;
   }
   
   .flash-container-button {
@@ -114,15 +121,6 @@
     border-radius: 5px;
   }
   
-  .pagination {
-    position: relative;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    h5 {
-      position: absolute;
-      left: 50%;
-    }
-  }
   
   .best-selling-header {
     display: flex;
@@ -137,3 +135,10 @@
       font-size: 16px;
     }
   }
+
+  .card-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 12px;
+}
